--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
